# challenge

./: .coverage  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
src/: main.py
src/api/routes/: game.py
src/core/: config.py
src/models/: board.py  player.py  property.py
src/schemas/: __init__.py  final_standing_response.py  game_simulation_response.py  multiple_simulations_response.py  player_response.py  property_response.py
src/services/: logging.py  runner.py
tests/endpoints/: client.py  test_game_endpoint.py
tests/fixtures/: game_fixtures.py
tests/services/: test_auto_runner.py  test_board.py  test_player.py  test_property.py
